# pibot_ros

./: .gitignore  .gitmodules  pibot_add_upstart.sh  pibot_create_swap.sh  pibot_init_env.sh  pibot_install_ros.sh  pibot_remove_upstart.sh  pibot_view_env.sh
pibot_upstart/: pibot.service  pibot_restart.sh  pibot_start.sh  pibot_stop.sh  pibotenv
pypibot/transport/: dataholder.py  main.py  params.py  test_motors.py  transport.py
ros_ws/src/Ros_Qt5_Gui_App/: CMakeLists.txt
ros_ws/src/Ros_Qt5_Gui_App/launch/: cyrobot_monitor.launch
ros_ws/src/Ros_Qt5_Gui_App/src/: main_window.cpp
ros_ws/src/imu_filter/src/: Madgwick_filter.cpp
ros_ws/src/imu_filter_madgwick/src/: imu_filter_ros.cpp
ros_ws/src/imu_publish/: CMakeLists.txt
ros_ws/src/imu_publish/include/imu_publish/: atom_macro.h  atomprotocol.h  com.h  main.h
ros_ws/src/imu_publish/launch/: imu.launch
ros_ws/src/imu_publish/src/: atomprotocol.cpp  com.cpp  main.cpp  receive.cpp
ros_ws/src/joy_control/: CMakeLists.txt  package.xml
ros_ws/src/joy_control/launch/: xbox_joy.launch
ros_ws/src/joy_control/src/: teleop_joy.cpp
ros_ws/src/pibot/: package.xml
ros_ws/src/pibot/launch/: keyboard_teleop.launch
ros_ws/src/pibot/scripts/: launch_demo.py  marker_server.py
ros_ws/src/pibot_bringup/: CMakeLists.txt
ros_ws/src/pibot_bringup/cfg/: pibot_parameter.cfg
ros_ws/src/pibot_bringup/config/: stm32_configuration
ros_ws/src/pibot_bringup/launch/: bringup_with_imu.launch  ltme.launch
ros_ws/src/pibot_bringup/params/: base_params.yaml  (+2 more)
rules/: imu_cp4.rules  pibot.rules
scripts/: setup_can.sh
(+43 files in other folders)
